--- a/web/myCss.css
+++ b/web/myCss.css
@@ -7,7 +7,28 @@
     bottom: 0;
     width: 100%;
     position: relative;
+/*    background-color:darkgray*/
 }
 #img{
     border-radius: 25px;
 }
+#content{
+    border-style: solid;
+    padding:10px;
+    background-color:aliceblue
+}
+.container{
+    border-style: solid;;
+    padding:15px;
+}
+body{
+    background-color:darkcyan;
+}
+table{
+    background-color: darkturquoise;
+}
+#cont{
+    background-color:darkgray;
+}
+
+
